--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,3 +1,7 @@
 # This removes "[Systemd]" from the prompt in Arch Linux
 [container]
 disabled = true
+[aws]
+disabled = true
+[gcloud]
+disabled = true
